2002-05-15  Federico Mena Quintero  <federico@ximian.com>

	* libgnomeui/gnome-icon-list.c (gil_get_items_per_line): Do a
	slightly better computation of how many icons fit in a row, by
	remembering that there are DEFAULT_COL_SPACING pixels between the
	icons and each of the left/right edges of the window.

2002-05-14  Michael Meeks  <michael@ximian.com>

	* libgnomeui/gnome-app-helper.c: 
	(create_and_popup_toolbar_menu): update string, argh,
	tolerate odd gconf key values.
	(toolbar_styles): correctly terminate the gconf enum.
	(per_app_toolbar_style_changed_notify),
	(create_and_popup_toolbar_menu),
	(toolbar_style_changed_notify),
	(gnome_app_setup_toolbar): repair all cut and paste in
	here so we don't SEGV on bogus gconf key values, isn't
	gconf enum handling great :-)

2002-05-13  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 1.117.0

2002-05-10  Glynn Foster  <glynn.foster@sun.com>

	* libgnomeui/gnome-app-helper.c: Give the help item 
	hints.

2002-05-08  Glynn Foster  <glynn.foster@sun.com>

	* libgnomeui/gnome-appbar.c: (gnome_appbar_constructor):
	s/-/_ for the gconf keys.

2002-05-08  Paolo Maggi  <maggi@athena.polito.it>

	* libgnomeui/gnome-app-helper.c (create_help_entries):
	use setup_image_menu_item to setup the icon of the 
	"Contents" menu item

Tue May 07 22:55:14 2002  George Lebl <jirka@5z.com>

	* libgnomeui/gnome-file-entry.c, libgnomeui/gnome-entry.c: do a bit
	  of cut and pasting from GtkEntry to fix up the GtkEditable
	  implementation of the file entry and the entry.  (the
	  do_insert_text and do_delete_text impls).  Fixes bad crashes
	  when you wish to use insert_text or delete text on these widgets.

2002-05-07  Paolo Maggi  <maggi@athena.polito.it>

	* libgnomeui/gnome-app-helper.c:
	* libgnomeui/gnome-uidefs.h: now gnome stock menus should be
	HIG compliant

	* libgnomeui/gnome-app-helper.c (create_help_entries): added 
	an icon and an accellerator to the "Contents" menu item
