@@ -145,11 +145,21 @@ update_pango_layout (GnomeIconTextItem *iti)
 		text = iti->text;
 	}
 
+	pango_layout_set_wrap (priv->layout, PANGO_WRAP_WORD);
 	pango_layout_set_text (priv->layout, text, strlen (text));
-
 	pango_layout_set_width (priv->layout, iti->width * PANGO_SCALE);
 
+	/* In PANGO_WRAP_WORD mode, words wider than a line of text make
+	 * PangoLayout overflow the layout width.  If this happens, switch to
+	 * character-based wrapping.
+	 */
+
 	pango_layout_get_pixel_extents (iti->_priv->layout, NULL, &bounds);
+
+	if (bounds.width > iti->width) {
+		pango_layout_set_wrap (priv->layout, PANGO_WRAP_CHAR);
+		pango_layout_get_pixel_extents (iti->_priv->layout, NULL, &bounds);
+	}
 
 	priv->layout_width = bounds.width;
 	priv->layout_height = bounds.height;
